[project]
name = "spatioloji_s"
version = "0.1.0"
description = "image_based spatial RNA sequencing"
readme = "README.md"
authors = [
  {name = "Ji Wang", email = "gynecoloji@gmail.com"}
]
maintainers = [
  {name = "Ji Wang", email = "gynecoloji@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.12"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/gynecoloji/spatioloji_s/issues"
changelog = "https://github.com/gynecoloji/spatioloji_s/blob/master/changelog.md"
homepage = "https://github.com/gynecoloji/spatioloji_s"

[project.scripts]
spatioloji_s = "spatioloji_s.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
