[project]
name = "spatioloji_s"
version = "0.3.0"
description = "image_based spatial RNA sequencing"
readme = "README.md"
authors = [
  {name = "Ji Wang", email = "gynecoloji@gmail.com"}
]
maintainers = [
  {name = "Ji Wang", email = "gynecoloji@gmail.com"}
]
keywords = ["spatial transcriptomics", "single cell", "CosMx", "MERFISH", "Xenium"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {text = "MIT"}
requires-python = ">= 3.12"

# ── Core dependencies (always installed) ──────────────────────────────────────
dependencies = [
    "typer",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "opencv-python",
    "networkx",
    "natsort",
    "tqdm",
    "geopandas",
    "shapely"
]

# ── Optional dependencies (installed on demand) ───────────────────────────────
[project.optional-dependencies]

spatial = [
    "geopandas",
    "shapely",
]

clustering = [
    "leidenalg",
    "igraph",
]

reduction = [
    "umap-learn",
]

batch = [
    "harmonypy",
    "combat",
    "statsmodels",
]

anndata = [
    "anndata",
    "scanpy",
]

imputation = [
    "DCA",
    # magic-impute: install separately in conda env
    # conda create -n magic_env && pip install magic-impute
]

test = [
    "coverage",
    "pytest",
    "ruff",
    "ty",
    "ipdb",
]

# Install everything at once: pip install spatioloji-s[all]
all = [
    "geopandas", "shapely",
    "leidenalg", "igraph",
    "umap-learn",
    "harmonypy", "combat", "statsmodels",
    "anndata", "scanpy",
    "DCA",
    "natsort", "tqdm", "networkx",
]

# ── Project URLs ───────────────────────────────────────────────────────────────
[project.urls]
bugs = "https://github.com/gynecoloji/spatioloji_s/issues"
changelog = "https://github.com/gynecoloji/spatioloji_s/blob/master/changelog.md"
homepage = "https://github.com/gynecoloji/spatioloji_s"

# ── CLI entry point ────────────────────────────────────────────────────────────
[project.scripts]
spatioloji_s = "spatioloji_s.cli:app"

# ── Tool configs (unchanged) ───────────────────────────────────────────────────
[tool.ty]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
